<resources>
    <string name="dailog_title">Alert</string>
    <string name="dailog_text">Please proceed to dedicated Scan &amp; Pay counter</string>
    <string name="dailog_ok">Ok</string>
    <string name="dailog_update_qnty">Quantity Updated</string>
    <string name="dailog_add_qnty">Item added to cart</string>
    <string name="dailog_home_delivery_text">Please handover purchase to customer service for delivery</string>
    <string name="facebook_app_id" translatable="false">681445183736523</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb681445183736523</string>
    <string name="facebook_client_token" translatable="false">d768cf312a027a08f868bbfd0e0b508e</string>
    <string name="client_id">2185019721628432</string>
    <string name="redirect_url">https://instagram.com/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="get_user_info_url">https://api.instagram.com/v1/users/self/?access_token=</string>
    <string name="twitter_api_key" translatable="false">sUoPrz3nkLBGLYDdvMRKfR9Mj</string>
    <string name="twitter_secret_key" translatable="false">V65D5wNQIGpiyVk3qwTuLTf8PBErBiN6l2N5xZ0R7I6eCbUUhS</string>
    <string name="app_name">Monoprix Qatar – M’ Loyalty</string>
    <string name="downloaded_at">Downloaded at: </string>
    <string name="something_went_wrong">something went wrong. file is corrupted.</string>
    <string name="server_error">Server is not available. Try again after sometime</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="this_feature_not">Only available at Monoprix, Msheireb store.</string>
    <string name="product_is_already_scanned">Product already scanned.</string>
    <string name="howscanandpayworks">How Scan &amp; Pay Works</string>
    <string name="generic_no_internet_desc">Oops...You do not seem to have a proper internet connection. Please try again after connecting to a valid internet connection
    </string>
    <string name="api_key">AIzaSyD6NmhuUMTS-GG7UlkM_GOgtXflvOlt2GY</string>
    <string name="signin">Sign in</string>
    <string name="allfieldsreq">All fields required</string>
    <string name="headertxt">Your application monoprix and me</string>
    <string name="crmyacc">CREATE MY ACCOUNT</string>
    <string name="alerdy">I already have an account</string>
    <string name="email">Email Id</string>
    <string name="dob">Date of Birth</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot your password?</string>
    <string name="scanandpay">SCAN &amp; PAY</string>
    <string name="scanpay">Scan &amp; Pay</string>
    <string name="mrestaurants">M Restaurants</string>
    <string name="dummytext">simply dummy text of the printing and typesetting industry. when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termsandconditions">Terms &amp; Conditions</string>
    <string name="or">or</string>
    <string name="help">Help</string>
    <string name="login">LOGIN</string>
    <string name="stayloo">Stay logged In</string>
    <string name="connect">Connect with your Social Media application</string>
    <string name="registration">Registration</string>
    <string name="mr">Mr</string>
    <string name="mrs">Mrs</string>
    <string name="ms">Ms</string>
    <string name="name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="familyname">Family Name</string>
    <string name="countrycode">Country Code</string>
    <string name="scountrycode">Country Code</string>
    <string name="countryName">Select Country</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="mobile_txt">Mobile</string>
    <string name="municipality">Municipality</string>
    <string name="street_txt">Street</string>
    <string name="landmark">Landmark</string>
    <string name="zone_txt">Zone No.</string>
    <string name="selectzone">Select Zone No.</string>
    <string name="nearme_Landmark_txt">Nearby Landmark</string>
    <string name="building_txt">Building</string>
    <string name="buildingnumber">Building No - </string>
    <string name="house_no_txt">House no.</string>
    <string name="please_selectyourhomecountry">Please select your Home Country</string>
    <string name="loyaltynumber">Loyalty Number</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="iconfirm">I confirm that I am 18 years old or above</string>
    <string name="confirm">Confirm</string>
    <string name="iagree">I have read &amp; agree to the</string>
    <string name="iterms">terms &amp; conditions</string>
    <string name="faq">FAQ</string>
    <string name="iagree1">I have read &amp; agree to the terms &amp; conditions</string>
    <string name="register">Register</string>
    <string name="createaccount">CREATE ACCOUNT</string>
    <string name="already">Already have an account? SIGN IN</string>
    <string name="minimumlen">Your password minimum length should be 6</string>
    <string name="phone_number_length">Your Phone Number length should be 8 digits.</string>
    <string name="secoun">Select Country</string>
    <string name="enterotp">Enter OTP</string>
    <string name="verificationcode">VERIFICATION CODE</string>
    <string name="otpon">We have sent an OTP on your number</string>
    <string name="resendotp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="otpheader">Verify Account</string>
    <string name="forgotpass">Forgot Your Password?</string>
    <string name="fortxt">We just need your registered email Id / phone number to send you password reset instructions.</string>
    <string name="resetpass">RESET PASSWORD</string>
    <string name="emailphone">Email/Phone Number</string>
    <string name="otp">OTP
        <font color="#D81B60">*</font>
    </string>
    <string name="dontreceive">Didn\'t received the OTP? <u>Resend OTP</u></string>
    <string name="otpon1">We have sent an OTP on</string>
    <string name="social_header">Please fill below details to complete sign up process</string>
    <string name="continuet">Continue</string>
    <string name="e_google_sign_in">Google sign in failed</string>
    <string name="home_st">MONOPRIX</string>
    <string name="en">En</string>
    <string name="storelocation">Store Location</string>
    <string name="myshopping">My Shopping List</string>
    <string name="myrewards">Monoprix Loyalty Program</string>
    <string name="measy">Shop Online</string>
    <string name="nopromotionsavailable">No Promotions available right now</string>
    <string name="location">Location</string>
    <string name="promotions">Promotions</string>
    <string name="itworks">How it work?</string>
    <string name="mymonoprix">Start my Monoprix Easy Journey</string>
    <string name="mycard">MY CARD</string>
    <string name="loyalty">LOYALTY</string>
    <string name="cag">MA CAGNOTTE</string>
    <string name="selang">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="home">Home</string>
    <string name="shlist">Shopping List</string>
    <string name="shop">Shop Online</string>
    <string name="stories">Stories</string>
    <string name="scanproduct">Scan Products</string>
    <string name="loyalbalance">Loyalty Balance</string>
    <string name="doha">Doha</string>
    <string name="al_rayan">Al Rayyan</string>
    <string name="al_daayen">Al Daayen</string>
    <string name="umm_salal">Umm Salal</string>
    <string name="al_shani">Al Shahaniya</string>
    <string name="al_khor">Al Khor</string>
    <string name="al_shamal">Al Shamal</string>
    <string name="al_wakra">Al Wakra</string>
    <string name="westbay">West Bay</string>
    <string name="aijasra">Al Jasra</string>
    <string name="thepearl">The Pearl</string>
    <string name="albaaye">Al Baaya</string>
    <string name="oldairport">Old Airport</string>
    <string name="dohaport">Doha Port</string>
    <string name="lusail">Lusail</string>
    <string name="diplomaticarea">Diplomatic Area</string>
    <string name="rewards">My Loyalty</string>
    <string name="please_fill_allthedetails">Please fill all the details to continue.</string>
    <string name="loyal_point">Loyalty Point</string>
    <string name="loyal_qar">Loyalty QAR</string>
    <string name="redeem">REDEEM</string>
    <string name="lp_pre_msg">You have</string>
    <string name="lp_post_msg">Loyalty points. Enter the points you wish to redeem</string>
    <string name="loyal_points">Loyalty Points</string>
    <string name="points">Points</string>
    <string name="use_points">REDEEM</string>
    <string name="email_send">Your request to register this device has been sent successfully to Monoprix Qatar, You will receive an email confirmation once the device is approved</string>
    <string name="myloyalty">My loyalty account</string>
    <string name="cardnumber">Your card number</string>
    <string name="displaymycard">DISPLAY MY CARD</string>
    <string name="currency">QAR 0.00</string>
    <string name="Loyalty_currency">0.00 QR</string>
    <string name="myapp">My Application : How does it work?</string>
    <string name="howdoesitworks">How does it work?</string>
    <string name="contactus">Contact Us</string>
    <string name="deleteaccount">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="allow">Allow</string>
    <string name="drawer_close">Close</string>
    <string name="mydeli">My Delivery Address</string>
    <string name="mypro">Shop Online</string>
    <string name="mloyaltyprogram">M’ Loyalty Program</string>
    <string name="mloyalty">Loyalty</string>
    <string name="mymono">My Monoprix Card</string>
    <string name="oursh">Our Shops</string>
    <string name="shoppinghistory">Shopping History</string>
    <string name="hello">Hello</string>
    <string name="hellowithntag">Hello</string>
    <string name="hello1">Hello</string>
    <string name="mcashrewards">M’ Cash Rewards</string>
    <string name="benefits">Loyalty Benefits</string>
    <string name="version">Version:</string>
    <string name="monoprixloyaltyprogram">Monoprix Loyalty program</string>
    <string name="jointhemonoprixfamily">Join the Monoprix family and start earning cash back  on every shopping. </string>
    <string name="welcometomonoprix">Welcome to the MONOPRIX family! Enjoy your shopping and earn cash back!</string>
    <string name="emptylist">Your list is empty</string>
    <string name="areyou">Are You Sure?</string>
    <string name="doyou">Do you really want to delete these records? This process cannot be undone.
    </string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="notificationtitle">Monoprix Qatar -M\' Loyalty Would Like to Send Notifications</string>
    <string name="notificationmessage">Notifications may include alerts, sound and icon badge. These can be configured in Settings.</string>
    <string name="paymentcomplete">Payment Completed Successfully</string>
    <string name="orderid">Order ID:</string>
    <string name="orderamount">Order Amount:</string>
    <string name="confemail">A confirmation email has been sent to</string>
    <string name="continueshop">CONTINUE SHOPPING</string>
    <string name="np">New Password
        <font color="#D81B60">*</font>
    </string>
    <string name="cnp">Confirm New Password
        <font color="#D81B60">*</font>
    </string>
    <string name="sign_in_required">Sign-in Required</string>
    <string name="alert_shoplist">You are not signed-in, please sign-in to view your product list</string>
    <string name="skip">SKIP</string>
</resources>