<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <!--
        <item
            android:id="@+id/navigation_shlist"
            android:enabled="true"
            android:visible="false"
            android:icon="@drawable/ic_round_assignment"
            android:title="@string/shlist" />
    -->
    <item
        android:id="@+id/navigation_visit"
        android:enabled="true"
        android:icon="@drawable/storelocation"
        android:title="@string/storelocation" />

    <!--
        <item
            android:id="@+id/navigation_scan"
            android:enabled="true"
            android:icon="@drawable/ic_scan"
            android:title="@string/scanproduct" />
    -->
    <item
        android:id="@+id/navigation_shop"
        android:enabled="true"
        android:icon="@drawable/shop"
        android:title="@string/shop" />

    <item
        android:id="@+id/navigation_loylitybalance"
        android:enabled="true"
        android:icon="@drawable/mloyaltyb"
        android:title="@string/mloyalty" />


</menu>