<!-- res/layout/custom_alert_dialog.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/customTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:textStyle="bold"
        android:text="@string/notificationtitle"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/customMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/notificationmessage"
        android:textSize="15sp" />

    <!-- Additional padding and smaller text size for the "Skip" button -->

    <LinearLayout
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/customSkipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:text="@string/skip"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/customAllowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:text="@string/allow"
            android:textColor="?android:attr/textColorPrimary"

            android:textStyle="bold"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>
