<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme">

    <include
        android:id="@+id/include"
        layout="@layout/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <com.production.monoprix.util.TextviewRegular
        android:id="@+id/txt_st_otp_on_no1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty"
        android:drawableEnd="@drawable/ic_edit"
        android:drawablePadding="@dimen/ten"
        android:drawableTint="@color/white"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3sp"
        android:text="@string/otpon1"
        android:textColor="@color/white"
        android:textSize="@dimen/fifteensp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_cp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginEnd="@dimen/twenty"
        android:theme="@style/TextLabel"
        app:layout_constraintTop_toBottomOf="@+id/txt_st_otp_on_no1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/otp"
            android:maxLength="5"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_np"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty"
        android:layout_marginTop="@dimen/thirty"
        android:theme="@style/TextLabel"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_cp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_np"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/np"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_cnp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty"
        android:layout_marginTop="@dimen/thirty"
        android:theme="@style/TextLabel"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_np"

        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_cnp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/cnp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.production.monoprix.util.TextviewBold
        android:id="@+id/txt_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/forty"
        android:layout_marginEnd="@dimen/twenty"
        android:layout_marginBottom="@dimen/thirty"
        android:background="@drawable/white_rectangle_corner_back"
        android:gravity="center"
        android:lineSpacingExtra="1sp"
        android:paddingStart="@dimen/forty"
        android:paddingTop="@dimen/fifteen"
        android:paddingEnd="@dimen/forty"
        android:paddingBottom="@dimen/fifteen"
        android:text="@string/verify"
        android:textAllCaps="true"
        android:textColor="@color/theme"
        android:textSize="@dimen/twentysp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_cnp" />

    <com.production.monoprix.util.TextviewRegular
        android:id="@+id/txt_dont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3sp"
        android:text="@string/dontreceive"
        android:textColor="@color/white"
        android:textSize="@dimen/fifteensp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_verify" />
</androidx.constraintlayout.widget.ConstraintLayout>