<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <ImageView
        android:id="@+id/img_confirm"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/thirty_two"
        android:src="@drawable/ic_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <com.production.monoprix.util.TextviewBold
        android:id="@+id/txt_st_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        android:text="@string/paymentcomplete"
        android:textColor="@color/green"
        android:textSize="@dimen/twentysp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_confirm" />

    <com.production.monoprix.util.TextviewBold
        android:id="@+id/txt_order_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        android:gravity="center"
        android:text="@string/orderid"
        android:textColor="@color/navigation"
        android:textSize="@dimen/twentysp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_st_pay" />

    <com.production.monoprix.util.TextviewBold
        android:id="@+id/txt_or_amount"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        android:gravity="center"
        android:text="@string/orderamount"
        android:textColor="@color/navigation"
        android:textSize="@dimen/twentysp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_order_id" />

    <com.production.monoprix.util.TextviewBold
        android:id="@+id/txt_loyalty_point"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        android:gravity="center"
        android:text="@string/loyal_point"
        android:textColor="@color/navigation"
        android:textSize="@dimen/twentysp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_or_amount" />

    <ImageView
        android:id="@+id/img_barcode"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/twenty"
        android:src="@drawable/dummy3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_loyalty_point" />

    <ImageView
        android:id="@+id/v1"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="@dimen/twenty"
        android:layerType="software"
        android:src="@drawable/dotted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_barcode" />

    <com.production.monoprix.util.TextviewBold
        android:id="@+id/txt_confirm_emial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        android:gravity="center"
        android:text="@string/confemail"
        android:textColor="@color/navigation"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v1" />

    <com.production.monoprix.util.TextviewBold
        android:id="@+id/txt_cont_shopping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/forty"
        android:layout_marginEnd="@dimen/twenty"
        android:layout_marginBottom="@dimen/thirty"
        android:background="@drawable/red_rectangle_corner_back"
        android:gravity="center"
        android:lineSpacingExtra="1sp"
        android:paddingStart="@dimen/forty"
        android:paddingTop="@dimen/fifteen"
        android:paddingEnd="@dimen/forty"
        android:paddingBottom="@dimen/fifteen"
        android:text="@string/continueshop"
        android:textColor="@color/white"
        android:textSize="@dimen/twentysp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirm_emial" />
</androidx.constraintlayout.widget.ConstraintLayout>