<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/back_color"
        android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.production.monoprix.util.TextviewBold
            android:id="@+id/txt_sign_in_required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/sign_in_required"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen"
            android:padding="@dimen/fifteen"
            android:drawableEnd="@drawable/ic_close_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <com.production.monoprix.util.TextviewBold
            android:id="@+id/txt_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_sign_in_required"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/alert_shoplist"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/twenty"
    />
    <com.production.monoprix.util.TextviewBold
            android:id="@+id/txt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_alert"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/ten"
            android:paddingBottom="@dimen/ten"
            android:paddingStart="@dimen/thirty"
            android:paddingEnd="@dimen/thirty"
            android:background="@drawable/red_rec_back"
            android:layout_margin="@dimen/twenty"
            android:layout_marginBottom="@dimen/thirty"
            app:layout_constraintBottom_toBottomOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>